fix: buttons wrapper height on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -174,7 +174,7 @@ header {
   }
 
   .calc-btns-wrapper {
-    height: max-content;
+    height: 45vh;
   }
 }
 
